fix : padding head logo align with text, adding "." in links

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header {
 }
 
 .logo_container {
-  margin-left: 150px;
+  padding-left: 10%;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
